@@ -1,0 +1,23 @@
+////
+This file is generated! See scripts/docs_collector.py
+////
+
+[[metricbeat-metricset-php_fpm-process]]
+=== PHP_FPM process metricset
+
+beta[]
+
+include::../../../module/php_fpm/process/_meta/docs.asciidoc[]
+
+
+==== Fields
+
+For a description of each field in the metricset, see the
+<<exported-fields-php_fpm,exported fields>> section.
+
+Here is an example document generated by this metricset:
+
+[source,json]
+----
+include::../../../module/php_fpm/process/_meta/data.json[]
+----
