@@ -522,7 +522,9 @@ metricbeat.modules:
 
 #------------------------------- PHP_FPM Module ------------------------------
 - module: php_fpm
-  metricsets: ["pool"]
+  metricsets:
+  - pool
+  #- process
   enabled: true
   period: 10s
   status_path: "/status"
