@@ -15,34 +15,39 @@
 // specific language governing permissions and limitations
 // under the License.
 
-package pool
+package process
 
 import (
-	"encoding/json"
+	"net/url"
 
 	"github.com/elastic/beats/libbeat/common/cfgwarn"
 	"github.com/elastic/beats/metricbeat/helper"
 	"github.com/elastic/beats/metricbeat/mb"
+	"github.com/elastic/beats/metricbeat/mb/parse"
 	"github.com/elastic/beats/metricbeat/module/php_fpm"
 )
 
-// init registers the MetricSet with the central registry.
+// init registers the MetricSet with the central registry as soon as the program
+// starts. The New function will be called later to instantiate an instance of
+// the MetricSet for each host defined in the module's configuration. After the
+// MetricSet has been created then Fetch will begin to be called periodically.
 func init() {
-	mb.Registry.MustAddMetricSet("php_fpm", "pool", New,
-		mb.WithHostParser(php_fpm.HostParser),
-		mb.DefaultMetricSet(),
-	)
+	mb.Registry.AddMetricSet("php_fpm", "process", New, php_fpm.HostParser)
 }
 
-// MetricSet type defines all fields of the MetricSet
+// MetricSet holds any configuration or state information. It must implement
+// the mb.MetricSet interface. And this is best achieved by embedding
+// mb.BaseMetricSet because it implements all of the required mb.MetricSet
+// interface methods except for Fetch.
 type MetricSet struct {
 	mb.BaseMetricSet
 	*helper.HTTP
 }
 
-// New create a new instance of the MetricSet
+// New creates a new instance of the MetricSet. New is responsible for unpacking
+// any MetricSet specific configuration options if there are any.
 func New(base mb.BaseMetricSet) (mb.MetricSet, error) {
-	cfgwarn.Beta("The php_fpm pool metricset is beta")
+	cfgwarn.Beta("The php_fpm process metricset is beta")
 	http, err := helper.NewHTTP(base)
 	if err != nil {
 		return nil, err
@@ -54,25 +59,23 @@ func New(base mb.BaseMetricSet) (mb.MetricSet, error) {
 	}, nil
 }
 
-// Fetch gathers data for the pool metricset
+// Fetch methods implements the data gathering and data conversion to the right
+// format. It publishes the event which is then forwarded to the output. In case
+// of an error set the Error field of mb.Event or simply call report.Error().
 func (m *MetricSet) Fetch(report mb.ReporterV2) {
+	u, err := url.Parse(m.GetURI())
+	if err != nil {
+		report.Error(err)
+		return
+	}
+	u, err = parse.SetQueryParams(u, "full")
+	if err == nil {
+		m.SetURI(u.String())
+	}
 	content, err := m.HTTP.FetchContent()
 	if err != nil {
 		report.Error(err)
 		return
 	}
-	var stats map[string]interface{}
-	err = json.Unmarshal(content, &stats)
-	if err != nil {
-		report.Error(err)
-		return
-	}
-	event, err := schema.Apply(stats)
-	if err != nil {
-		report.Error(err)
-		return
-	}
-	report.Event(mb.Event{
-		MetricSetFields: event,
-	})
+	eventsMapping(report, content)
 }
