@@ -4,6 +4,7 @@
 - module: php_fpm
   #metricsets:
   #  - pool
+  #  - process
   period: 10s
   hosts: ["localhost:8080"]
   status_path: "/status"
